--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Abinet Tesfu <abinatmail@gmail.com>
-Melat Samuel <melatsam555@gmail.com>
+yosef tamrat <jossytamrat123@gmail.com>
+aklil dereje <aklildereje@gmail.com>
