--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists the people who have contributed to this assignment.
 
 yosef tamrat <jossytamrat123@gmail.com>
-aklil dereje <aklildereje@gmail.com>
+aklil dereje <aklildereje72@gmail.com>
